--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,13 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f0f0f0;
+    background-color: #cecece;
     padding-top: 60px;
 }
 
 header {
-    background-color: #333;
+    background: linear-gradient(169deg,rgba(236, 186, 77, 0.808), rgb(237, 243, 148),rgba(150, 240, 213, 0.904));
+    border-radius: 10px;
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -27,6 +28,8 @@ header h1 {
     font-size: 2em;
     letter-spacing: 2px;
     margin: 0;
+    font-family: unset;
+    color: white;
 }
 
 #searchInput {
@@ -41,12 +44,17 @@ header h1 {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+#searchInput:hover{
+    background-color: #f0f0f0;
+}
+
 #movieContainer {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
     padding: 20px;
-    margin-top: 100px; /* Add space for the fixed header */
+    margin-top: 100px;
+    margin-bottom: 50px;
 }
 
 .movie {
@@ -101,4 +109,16 @@ header h1 {
 
 .download-button:hover {
     background-color: #45a049; /* Darker green */
+}
+
+footer{
+    background-color: #837171;
+    color: rgb(255, 255, 255);
+    padding: 20px;
+    text-align: center;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    z-index: 1000;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
